--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.4.3+1
   shared_preferences: ^2.2.3
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
