--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^12.0.2
+  provider: ^6.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
